# pyxel-how

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
src/: pyxel_launcher_run.py
src/pyxel_how/: __main__.py  hello.py  index.html
