[metadata]
name = pyxel-how
version = 0.1.0
author = Boni Lindsley
author_email = boni@lindsley.xyz
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
description = Learning how to use Pyxel
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
install_requires =
    pyxel >= 2.0.2
python_requires = >= 3.11
packages = find_namespace:
package_dir =
    = src

[options.entry_points]
console_scripts =
  pyxel-how = pyxel_how.__main__:main

[options.extras_require]
dev =
    black >= 23.3.0
    mypy >= 1.2.0
    pylint >= 2.17.2
    tox >= 4.4.11

[options.package_data]
* =
    index.html
    py.typed

[options.packages.find]
where = src

[tox:tox]
env_list = py
min_version = 4.4.11

[testenv]
commands =
    {envpython} -m black --check --diff src setup.py
    {envpython} -m mypy --package pyxel_how
    {envpython} -m mypy setup.py
    {envpython} -m pylint pyxel_how setup.py
extras = dev
usedevelop = True
